# Arachne

./: .gitignore  BOX_DETECTION_ALGORITHM.md  CYCLE_DETECTION_EXAMPLES.rs  CYCLE_DETECTION_IMPLEMENTATION.md  CYCLE_DETECTION_INDEX.md  CYCLE_DETECTION_SUMMARY.md  Cargo.toml  README.md  modelset_coverage.py
.output/: Cargo.toml
.output/src/: generated.rs  main.rs  model.rs
arachne-cli/: Cargo.toml  README.md
arachne-cli/src/: main.rs
arachne-codegen/: Cargo.toml  README.md
arachne-codegen/src/: config.rs  error.rs  lib.rs  parser.rs  project.rs
arachne-codegen/src/codegen/: annotation.rs  cycles.rs  generate.rs  generator.rs  import.rs  mod.rs  package.rs  warnings.rs
arachne-codegen/src/codegen/classifier/: class.rs  mod.rs
arachne-codegen/src/codegen/datatype/: to_crdt.rs
arachne-codegen/src/codegen/feature/: attribute.rs  bounds.rs  containment.rs
arachne-codegen/src/codegen/operation/: mod.rs
arachne-codegen/src/codegen/reference/: analysis.rs  containment.rs  generate.rs  mod.rs  model_log.rs
arachne-codegen/src/utils/: topo.rs
arachne-parser/: Cargo.toml  README.md
arachne-parser/examples/: aas_demo.rs
arachne-parser/rsc/: bt.ecore
arachne-parser/src/: ctx.rs  prelude.rs  repr.rs
arachne-parser/src/parser/: raw.rs
arachne-parser/src/repr/: bounds.rs  builtin.rs  idx.rs  structural.rs
docs/: REFERENCE_GENERATION_STRATEGY.md
examples/: Ecore.ecore  Nabla.ecore  aas.ecore  abstract_inherits_concrete.ecore  bt.ecore  class_hierarchy.ecore  json.ecore  kitchen_sink.ecore  test_types.ecore
examples/pet_metamodels/: concrete_inherits_concrete.ecore  concrete_polymorphic_targets.ecore  kitchen_sink.ecore
src/: config.rs  error.rs  lib.rs  main.rs  parser.rs  project.rs
src/codegen/: class.rs  cycles.rs  generate.rs  generator.rs  import.rs  mod.rs  package.rs  record.rs  warnings.rs
src/codegen/classifier/: class.rs  mod.rs
src/codegen/datatype/: crdt.rs  mod.rs  to_crdt.rs
src/codegen/feature/: attribute.rs  bounds.rs  mod.rs  reference.rs
src/codegen/reference/: containment.rs  generate.rs  mod.rs
src/utils/: hash.rs  mod.rs
