[package]
name = "atraktos"
version = "0.1.0"
edition = "2024"

[dependencies]
ecore_rs = { version = "*", path = "../ecore.rs" }
moirai-protocol = { version = "*", path = "../moirai/moirai-protocol" }
moirai-crdt = { version = "*", path = "../moirai/moirai-crdt" }
moirai-macros = { version = "*", path = "../moirai/moirai-macros" }
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = "2.0.114"
prettyplease = "0.2.37"
anyhow = "1.0"
thiserror = "1.0"
