[workspace]
resolver = "3"
members = ["arachne-codegen", "arachne-cli", "arachne-parser"]

[workspace.package]
license = "Apache-2.0"
authors = ["Léo Olivier <leo.olivier@cea.fr>"]
repository = "https://github.com/CEA-LIST/Arachne.git"
homepage = "https://github.com/CEA-LIST/Arachne"
description = "Arachne: a code generator that translates Ecore's metamodel-based Domain-Specific Languages (DSL) into a composition of Conflict-free Replicated Data Types (CRDT)."
readme = "README.md"
keywords = [
    "crdt",
    "conflict-free replicated data type",
    "ecore",
    "model-driven engineering",
    "model transformation",
    "code generation",
    "Eclipse Modeling Framework",
    "model-based software engineering",
    "collaborative applications",
    "distributed systems",
    "rust",
]
categories = []
