[package]
name = "bt"
version = "0.1.0"
edition = "2024"

[dependencies]
moirai-crdt = { path = "/Users/ekkaiasmith/Desktop/moirai/moirai-crdt" }
moirai-protocol = { path = "/Users/ekkaiasmith/Desktop/moirai/moirai-protocol" }
moirai-macros = { path = "/Users/ekkaiasmith/Desktop/moirai/moirai-macros" }
petgraph = "0.8.3"
