[package]
name = "arachne-cli"
version = "0.1.0"
edition = "2024"
description = "CLI tool for Arachne"

[[bin]]
name = "arachne"
path = "src/main.rs"

[dependencies]
ecore_rs = { version = "*", path = "../arachne-parser" }
arachne-codegen = { version = "*", path = "../arachne-codegen" }
anyhow = "1.0"
clap = { version = "4.5.31", features = ["derive", "env"] }
colored = "2.1"
env_logger = "0.11.9"
log = "0.4.29"
