[package]
name = "ecore_rs"
version = "0.1.0"
authors = ["Red Iron Team <red-iron@ocamlpro.com>"]
edition = "2021"
description = "A parser for the Eclipse Modeling Framework Ecore format."
readme = "README.md"
license = "LGPL-3.0-or-later"
keywords = ["ecore", "eclipse", "EMF"]
categories = ["encoding", "parser-implementations"]

[dependencies]
log = "0.4"
regex = "1.6"
anyhow = "1.0.65"
safe_index = "0.9"
smallvec = "1.10"

[dev-dependencies]
simple_logger = "2.3"
